--- a/cartridges/app_custom_acn/cartridge/templates/resources/login.properties
+++ b/cartridges/app_custom_acn/cartridge/templates/resources/login.properties
@@ -1,4 +1,5 @@
 header.hero.image.login=Login
+header.hero.image.cadastrese=Cadastre-se
 header.form.trackorder=Verifique o pedido
 header.form.trackorder.text=Veja seu pedido mesmo se você não for um usuário registrado. Digite o número do pedido e o código postal do endereço de cobrança.
 
